<resources>
    <string name="app_name">AAC</string>
    <string name="calorie">Calorie</string>
    <string name="purchase_history">購入履歴</string>
    <string name="campaign">キャンペーン</string>
    <string name="setting">設定</string>
    <string name="done">Doneリスト</string>
    <string name="filter">フィルター</string>
    <string name="save">保存</string>
    <string name="alreadly_read">既読</string>

    <string name="fragment_blank_title">作成中</string>
    <string name="fragment_campaign_title">キャンペーン</string>
    <string name="fragment_purchase_create_title">作成（購入履歴）</string>
    <string name="fragment_purchase_title">購入履歴</string>
    <string name="fragment_done_title">@string/done</string>
    <string name="fragment_done_create_edit_title">完了したことのタイトル</string>
    <string name="fragment_done_create_edit_description">説明</string>
    <string name="fragment_done_create_title">完了したことを作成</string>
    <string name="fragment_done_create_error_message_title">タイトルを入力してください</string>
    <string name="fragment_done_create_edit_completed_at">完了日時</string>
</resources>
